Latest projects section #36

--- a/index.html
+++ b/index.html
@@ -86,24 +86,7 @@
 
     <section class="facts bg-gradient-blue">
         <div class="container">
-            <div id="facts" class="row flex text-center">
-                <!-- <div class="col-3">
-                    <h4>2536</h4>
-                    <p>Project Completed</p>
-                </div>
-                <div class="col-3">
-                    <h4>6784</h4>
-                    <p>Happy Clients</p>
-                </div>
-                <div class="col-3">
-                    <h4>2239</h4>
-                    <p>Cups of Coffee</p>
-                </div>
-                <div class="col-3">
-                    <h4>434</h4>
-                    <p>Real Professionals</p>
-                </div> -->
-            </div>
+            <div id="facts" class="row flex text-center"></div>
         </div>
     </section>
 
@@ -116,64 +99,9 @@
                 </div>
             </div>
             <div class="row text-center project-categories">
-                <div class="col">
-                    <a href="#" class="active">All</a>
-                    <a href="#">Vector</a>
-                    <a href="#">Raster</a>
-                    <a href="#">Ui/ux</a>
-                    <a href="#">Printing</a>
-                </div>
+                <div class="col flex"></div>
             </div>
-            <div class="row flex text-center">
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p1.jpg" alt="Project image">
-                    </div>
-                    <h4>2D vinyl design</h4>
-                    <div class="project-category">vector</div>
-                </div>
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p2.jpg" alt="Project image">
-                    </div>
-                    <h4>2D vinyl design</h4>
-                    <div class="project-category">vector</div>
-                </div>
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p3.jpg" alt="Project image">
-                    </div>
-                    <h4>Creative poster design</h4>
-                    <div class="project-category">Agency</div>
-                </div>
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p4.jpg" alt="Project image">
-                    </div>
-                    <h4>Embosed logo design</h4>
-                    <div class="project-category">portal</div>
-                </div>
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p5.jpg" alt="Project image">
-                    </div>
-                    <h4>3D helmet design</h4>
-                    <div class="project-category">vector</div>
-                </div>
-                <div class="col-4">
-                    <div class="project-photo">
-                        <div class="overlay"></div>
-                        <img src="./img/gallery/p6.jpg" alt="Project image">
-                    </div>
-                    <h4>2D vinyl design</h4>
-                    <div class="project-category">raster</div>
-                </div>
-            </div>
+            <div class="row flex text-center"></div>
         </div>
     </section>
 
