--- a/index.html
+++ b/index.html
@@ -183,25 +183,7 @@
     </section>
 
     <section class="brands bg-gradient-blue">
-        <div class="container">
-            <div class="row flex space-around">
-                <div class="col">
-                    <a href="#"><img src="./img/brands/1.png" alt=""></a>
-                </div>
-                <div class="col">
-                    <a href="#"><img src="./img/brands/2.png" alt=""></a>
-                </div>
-                <div class="col">
-                    <a href="#"><img src="./img/brands/3.png" alt=""></a>
-                </div>
-                <div class="col">
-                    <a href="#"><img src="./img/brands/4.png" alt=""></a>
-                </div>
-                <div class="col">
-                    <a href="#"><img src="./img/brands/5.png" alt=""></a>
-                </div>
-            </div>
-        </div>
+        <div class="container overflow-hidden"></div>
     </section>
 
     <footer>
