--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 <div class="col-6">
                     <h6 class="text-uppercase">This is me</h6>
                     <h1 class="text-uppercase">Philip Gilbert</h1>
-                    <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge
-                    some different futures.</p>
+                    <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
                     <a class="btn bg-gradient-blue text-uppercase" href="#">Discover now</a>
                 </div>
                 <div class="col-6 sm-first sm-text-center">
@@ -168,44 +167,11 @@
                    <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
                 </div>
             </div>
-            <div class="row flex row-center feeds">
-                <div class="col-6 flex feed">
-                    <div class="row">
-                        <div class="col">
-                            <img src="./img/user/user1.png" alt="User photo">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <p>Do you want to be even more successful? Learn to love learning and growth. The more effort you put into improving
-                                your
-                                skills, the bigger the payoff you.</p>
-                            <h4>Harriet Maxwell</h4>
-                            <p>CEO at Google</p>
-                        </div>
-                    </div>
+            <div class="testimonial"></div>
+            <div class="feedback-btn">
+                <div class="btn-left lnr lnr-arrow-left" data-direction="left">
                 </div>
-                <div class="col-6 flex feed">
-                    <div class="row">
-                        <div class="col">
-                            <img src="./img/user/user2.png" alt="User photo">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <p>A purpose is the eternal condition for success. Every former smoker can tell you just how hard it is to stop smoking
-                                cigarettes. However.</p>
-                            <h4>Carolyn Craig</h4>
-                            <p>CEO at Facebook</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="feedback-btn">
-                    <div class="btn-left lnr lnr-arrow-left">
-                    </div>
-                    <div class="btn-right lnr lnr-arrow-right">
-                    </div>
+                <div class="btn-right lnr lnr-arrow-right" data-direction="right">
                 </div>
             </div>
         </div>
@@ -228,9 +194,7 @@
             <div class="row">
                 <div class="col text-center">
                     <h2>Latest posts from our blog</h2>
-                    <p>You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the
-                        chances of
-                        improving and expanding the business</p>
+                    <p>You may be a skillful, effective employer but if you don’t trust your personnel and the opposite, then the chances of improving and expanding the business</p>
                 </div>
             </div>
             <div class="row flex"></div>
