Rewrite CSS to sass #52 #53

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
                 <a class="btn" href="#">Discover now</a>
             </div>
-            <div class="col-6 sm-first">
-                <img class="sm-width-70" src="./img/hero-img.png" alt="Philip Gilbert hero">
+            <div class="col-6 md-first">
+                <img class="md-width-70" src="./img/hero-img.png" alt="Philip Gilbert hero">
             </div>
         </div>
     </section>
@@ -150,8 +150,10 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="row container flex">
-            <div class="col">
+        <div class="container">
+
+        <div class="row flex">
+            <div class="col-6">
                 <h3>About Me</h3>
                 <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</p>
                 <div class="copyright">
@@ -159,7 +161,7 @@
                     <p>This template is made with <span class="fa fa-heart-o" aria-hidden="true"></span> by <a href="https://github.com/front-end-by-rimantas/10-grupe-portfolio-personal" target="_blank">Artūras & Giedrius</a></p>
                 </div>
             </div>
-            <div class="col">
+            <div class="col-6">
                 <h3>Newsletter</h3>
                 <p>Stay updated with our latest trends</p>
                 <form>
@@ -167,7 +169,7 @@
                     <button class="lnr lnr-arrow-right"></button>
                 </form>
             </div>
-            <div class="col">
+            <div class="col-auto">
                 <h3>Follow Me</h3>
                 <p>Let us be social</p>
                 <div class="social-networks">
@@ -177,6 +179,7 @@
                     <a href="#" target="_blank" class="fa fa-behance"></a>
                 </div>
             </div>
+        </div>
         </div>
     </footer>
     <!-- FOOTER END -->
