Header navigation structure update #42

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <!-- HEADER -->
     <header>
         <div class="container">
-            <div class="row flex">
+            <div class="row">
                 <div class="col">
-                    <img src="./img/logo.png" alt="Personal portfolio logo">
+                    <a href="/">
+                        <img src="./img/logo.png" alt="Personal portfolio logo">
+                    </a>
                 </div>
-                <div class="col hidden-md">
-                    <nav></nav>
-                </div>
+                <div class="col"><nav></nav></div>
             </div>
         </div>
     </header>
@@ -32,8 +32,8 @@
     <!-- HERO -->
     <section class="hero bg-light">
         <div class="row container flex row-center">
-            <div class="col-6 text-left">
-                <h6 class="text-uppercase">This is me</h6>
+            <div class="col-6 md-text-left">
+                <h6 class="text-uppercase letter-spacing">This is me</h6>
                 <h1 class="text-uppercase">Philip Gilbert</h1>
                 <p>You will begin to realise why this exercise is called the Dickens Pattern with reference to the ghost showing Scrooge some different futures.</p>
                 <a class="btn" href="#">Discover now</a>
@@ -51,7 +51,7 @@
             <div class="col-6">
                 <img src="./img/about-img.png" alt="About image">
             </div>
-            <div class="col-6 text-left">
+            <div class="col-6 md-text-left">
                 <h6 class="text-uppercase">About me</h6>
                 <h2 class="text-uppercase">Personal details</h2>
                 <p>Here, I focus on a range of items and features that we use in life without giving them a second thought. such as Coca Cola. Dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
@@ -95,23 +95,23 @@
     <!-- PROJECTS END -->
 
     <!-- FEEDBACKS -->
-    <section class="feedbacks bg-color-light">
+    <!-- <section class="feedbacks bg-color-light">
         <div class="container">
             <div class="row">
                 <div class="col">
                    <h2>Client’s Feedback About Me</h2>
                    <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
                 </div>
-            </div>
+            </div> -->
             <!-- <div class="testimonial"></div> -->
-            <div class="feedback-btn">
+            <!-- <div class="feedback-btn">
                 <div class="btn-left lnr lnr-arrow-left" data-direction="left">
                 </div>
                 <div class="btn-right lnr lnr-arrow-right" data-direction="right">
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- FEEDBACKS END -->
 
     <!-- PLANS -->
@@ -143,9 +143,9 @@
     <!-- BLOG POSTS END -->
 
     <!-- BRANDS -->
-    <section class="brands bg-gradient">
+    <!-- <section class="brands bg-gradient">
         <div class="container overflow-hidden"></div>
-    </section>
+    </section> -->
     <!-- BRANDS END -->
 
     <!-- FOOTER -->
@@ -187,7 +187,7 @@
     <!-- MOBILE NAV -->
     <div class="mobile-overlay"></div>
     <nav class="mobile-nav"></nav>
-    <i class="lnr lnr-menu hidden"></i>
+    <i class="lnr lnr-menu xt"></i>
     <!-- MOBILE NAV END -->
 
     <script src="./js/data.js"></script>
