--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <!-- HEADER -->
@@ -143,9 +143,7 @@
     <!-- BLOG POSTS END -->
 
     <!-- BRANDS -->
-    <!-- <section class="brands bg-gradient">
-        <div class="container overflow-hidden"></div>
-    </section> -->
+    <section class="brands bg-gradient"><div class="container"></div></section>
     <!-- BRANDS END -->
 
     <!-- FOOTER -->
@@ -190,8 +188,8 @@
     <i class="lnr lnr-menu xt"></i>
     <!-- MOBILE NAV END -->
 
-    <script src="./js/data.js"></script>
-    <script src="./js/functions.js"></script>
-    <script src="./js/actions.js"></script>
+    <script src="./js/data.min.js"></script>
+    <script src="./js/functions.min.js"></script>
+    <script src="./js/actions.min.js"></script>
 </body>
 </html>
