--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
     <!-- PROJECTS END -->
 
     <!-- FEEDBACKS -->
-    <!-- <section class="feedbacks bg-color-light">
+    <!-- <section class="feedbacks bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
                    <h2>Client’s Feedback About Me</h2>
                    <p>It is very easy to start smoking but it is an uphill task to quit it. Ask any chain smoker or even a person.</p>
                 </div>
-            </div> -->
-            <!-- <div class="testimonial"></div> -->
-            <!-- <div class="feedback-btn">
+            </div>
+            <div class="testimonial"></div>
+            <div class="feedback-btn">
                 <div class="btn-left lnr lnr-arrow-left" data-direction="left">
                 </div>
                 <div class="btn-right lnr lnr-arrow-right" data-direction="right">
@@ -127,7 +127,7 @@
     <!-- PLANS END -->
 
     <!-- BLOG POSTS -->
-    <section class="posts bg-color-light">
+    <section class="posts bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -149,35 +149,34 @@
     <!-- FOOTER -->
     <footer>
         <div class="container">
-
-        <div class="row flex">
-            <div class="col-6">
-                <h3>About Me</h3>
-                <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</p>
-                <div class="copyright">
-                    <p>Copyright &copy; 2019 All rights reserved</p>
-                    <p>This template is made with <span class="fa fa-heart-o" aria-hidden="true"></span> by <a href="https://github.com/front-end-by-rimantas/10-grupe-portfolio-personal" target="_blank">Artūras & Giedrius</a></p>
+            <div class="row flex">
+                <div class="col-6">
+                    <h3>About Me</h3>
+                    <p>We have tested a number of registry fix and clean utilities and present our top 3 list on our site for your convenience.</p>
+                    <div class="copyright">
+                        <p>Copyright &copy; 2019 All rights reserved</p>
+                        <p>This template is made with <span class="fa fa-heart-o" aria-hidden="true"></span> by <a href="https://github.com/front-end-by-rimantas/10-grupe-portfolio-personal" target="_blank">Artūras & Giedrius</a></p>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <h3>Newsletter</h3>
+                    <p>Stay updated with our latest trends</p>
+                    <form>
+                        <input type="email" placeholder="Enter Email Address">
+                        <button class="lnr lnr-arrow-right"></button>
+                    </form>
+                </div>
+                <div class="col-auto">
+                    <h3>Follow Me</h3>
+                    <p>Let us be social</p>
+                    <div class="social-networks">
+                        <a href="#" target="_blank" class="fa fa-facebook"></a>
+                        <a href="#" target="_blank" class="fa fa-twitter"></a>
+                        <a href="#" target="_blank" class="fa fa-dribbble"></a>
+                        <a href="#" target="_blank" class="fa fa-behance"></a>
+                    </div>
                 </div>
             </div>
-            <div class="col-6">
-                <h3>Newsletter</h3>
-                <p>Stay updated with our latest trends</p>
-                <form>
-                    <input type="email" placeholder="Enter Email Address">
-                    <button class="lnr lnr-arrow-right"></button>
-                </form>
-            </div>
-            <div class="col-auto">
-                <h3>Follow Me</h3>
-                <p>Let us be social</p>
-                <div class="social-networks">
-                    <a href="#" target="_blank" class="fa fa-facebook"></a>
-                    <a href="#" target="_blank" class="fa fa-twitter"></a>
-                    <a href="#" target="_blank" class="fa fa-dribbble"></a>
-                    <a href="#" target="_blank" class="fa fa-behance"></a>
-                </div>
-            </div>
-        </div>
         </div>
     </footer>
     <!-- FOOTER END -->
